<resources>
    <string name="app_name">Trip Manager</string>
    <string name="action_settings">Settings</string>
    <string name="registration_no">Registration No</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="cross_image_content_description">Delete trip from SQLite database</string>
    <string name="empty_list_message">List is Empty!</string>
    <string name="update">Update</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_button">Create</string>
    <string name="all_delete">All Delete</string>
    <string name="edit_button_description">Edit Single trip information</string>
    <string name="name">Name</string>
    <string name="registration_no_with_color">Registration Number: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_button">Update</string>
    <string name="destination">Destination</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="add_to_database">Add to Database</string>
    <string name="date_of_the_trip">Date of the Trip</string>
    <string name="require_risks_assessment">Require Risks Assessment</string>
    <string name="description_dots">Description…</string>
    <string name="see_all_expenses">See all Expenses</string>
    <string name="edit">Edit</string>
    <string name="type">Type</string>
    <string name="amount">Amount</string>
    <string name="time_of_the_expenses">Time of the Expenses</string>
    <string name="add">Add</string>
    <string name="trips">Trips</string>
    <string name="search">Search</string>
</resources>
